# VaultChat

./: .env  .gitignore  README.md  compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260530000000_init.sql  20260626150000_add_public_key.sql  20260628160000_private_key.sql  20260629214600_messages.sql
backend/src/: error.rs  main.rs  state.rs
backend/src/db/: messages.rs  mod.rs  pool.rs  users.rs
backend/src/handlers/: mod.rs  users.rs  vault_chat.rs
backend/src/helpers/: password.rs
backend/src/models/: mod.rs  user.rs  vault_chat.rs
backend/src/routes/: mod.rs  users.rs  vault_chat.rs  ws.rs
backend/src/security/: auth.rs
backend/src/websocket/: mod.rs  ws_setup.rs
frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: lib.rs  main.rs
frontend/src/app/: app.rs
frontend/src/components/navbar/: logout.rs  mod.rs  nav.rs  theme.rs
frontend/src/data_models/: contact.rs  message.rs  user.rs
frontend/src/pages/: mod.rs
frontend/src/pages/chat/: chat.rs
frontend/src/pages/home/: home.rs
frontend/src/pages/login/: helpers.rs  login.rs  mod.rs
frontend/src/pages/register/: helpers.rs  mod.rs  register.rs
frontend/src/services/: keys.rs  mod.rs  web.rs
frontend/src/store/: auth.rs
frontend/style/: input.css
postgres/: init.sql
