[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
icondata = "0.7.0"
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = "0.18.3"
leptos_icons = "0.7.1"
leptos_router = "0.8.13"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
unicode-normalization = "0.1.25"
zxcvbn = "3.1.1"
