[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Time types
chrono = { version = "0.4.45" , features = ["serde"]}

# Web assembly
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = "0.18.3"
leptos_icons = "0.7.1"
leptos_router = "0.8.13"
web-sys = { version = "0.3.103", features = ["Crypto", "SubtleCrypto", "CryptoKey", "CryptoKeyPair", "Window", "Pbkdf2Params", "AesGcmParams", "TextEncoder"] }
indexed_db_futures = "0.6.4"
wasm-bindgen-futures = "0.4.76"
wasm-bindgen = "0.2.126"
js-sys = "0.3.103"

#UI
icondata = "0.7.0"
gloo-timers = "0.3.0"

# HTTP requests
reqwest = { version = "0.13.4", features = ["json"] }

# Json serialize/deserialize
serde = { version = "1.0.228", features = ["derive"] }

# Password strength check
zxcvbn = "3.1.1"
unicode-normalization = "0.1.25"

# Key gen
rsa = { version = "0.9", features = ["pem"] }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
